Bug #1206: Question title more pronounced and with greater spacing.

--- a/ape.css
+++ b/ape.css
@@ -14,6 +14,11 @@ div.title {
 div.pageTitle {
 	width: auto;
 	height: 20px;
+	margin-top: 20px;
+}
+
+div.pageTitle span{
+	font-size: 1.5em;
 }
 
 div.testHalt {
